<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:parentActivityName=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_songs" />

        <Button
            android:id="@+id/playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_playing" />

        <Button
            android:id="@+id/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_store" />

        <Button
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_genres" />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.redstarmediaplayer.MainActivity">

        <!-- Main background -->


        <ImageView
            android:id="@+id/background"
            style="@style/MainBackground"
            android:contentDescription="@string/background" />

        <ImageView
            android:id="@+id/song_album_image"
            style="@style/SongAlbumImage"
            android:contentDescription="@string/album_image" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/play_pause_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seek_bar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/song_player_min_sec"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4d88ff" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seek_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:text="@string/song_player_mp3_extension"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#4d88ff" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seek_bar"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/song_player_min_sec"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4d88ff" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rewind_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toLeftOf="@+id/play_pause_button"
            android:layout_toStartOf="@+id/play_pause_button"
            android:alpha="0.5"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/rewind"
            android:textColor="#FFF"
            app:backgroundTint="#2952a3" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:alpha="0.5"
            android:text="@string/pause"
            android:textColor="#FFF"
            app:backgroundTint="#cccc00" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/play_pause_button"
            android:layout_toRightOf="@+id/play_pause_button"
            android:alpha="0.5"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/forward"
            android:textColor="#FFF"
            app:backgroundTint="#2952a3" />

    </RelativeLayout>

</LinearLayout>
